--- a/Series/serie94.html
+++ b/Series/serie94.html
@@ -93,74 +93,74 @@ var serieActual = {
 var videosPorCapitulo = {
   "1": {
     "1": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRobnFiL3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvYkt4aUxSUFZXZTJuWlhDenQ2SlByNUhOV1ltLmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMXgx"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6thnqb/playlist.m3u8"
     },
     "2": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRobndsL3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvYkt4aUxSUFZXZTJuWlhDenQ2SlByNUhOV1ltLmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMXgy"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6thnwl/playlist.m3u8"
     },
     "3": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRobzRiL3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvYkt4aUxSUFZXZTJuWlhDenQ2SlByNUhOV1ltLmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMXgz"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6tho4b/playlist.m3u8"
     },
     "4": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRob2JoL3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvYkt4aUxSUFZXZTJuWlhDenQ2SlByNUhOV1ltLmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMXg0"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6thobh/playlist.m3u8"
     },
     "5": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRob2liL3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvYkt4aUxSUFZXZTJuWlhDenQ2SlByNUhOV1ltLmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMXg1"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6thoib/playlist.m3u8"
     },
     "6": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRocDZuL3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvYkt4aUxSUFZXZTJuWlhDenQ2SlByNUhOV1ltLmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMXg2"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6thp6n/playlist.m3u8"
     },
     "7": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRocGR6L3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvYkt4aUxSUFZXZTJuWlhDenQ2SlByNUhOV1ltLmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMXg3"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6thpdz/playlist.m3u8"
     },
     "8": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRocHNsL3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvYkt4aUxSUFZXZTJuWlhDenQ2SlByNUhOV1ltLmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMXg4"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6thpsl/playlist.m3u8"
     }
   },
   "2": {
     "1": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRocXViL3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9tZWRpYS50aGVtb3ZpZWRiLm9yZy90L3AvdzIyN19hbmRfaDEyN19iZXN0djIvNHhGWXNpcGdwaGtXQWNmY1NWblE0bmJ3Qmx3LmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMngx"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6thqub/playlist.m3u8"
     },
     "2": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRocXliL3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9tZWRpYS50aGVtb3ZpZWRiLm9yZy90L3AvdzIyN19hbmRfaDEyN19iZXN0djIvNHhGWXNpcGdwaGtXQWNmY1NWblE0bmJ3Qmx3LmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMngy"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6thqyb/playlist.m3u8"
     },
     "3": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRocjI5L3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9tZWRpYS50aGVtb3ZpZWRiLm9yZy90L3AvdzIyN19hbmRfaDEyN19iZXN0djIvNHhGWXNpcGdwaGtXQWNmY1NWblE0bmJ3Qmx3LmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMngz"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6thr29/playlist.m3u8"
     },
     "4": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRocmNsL3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9tZWRpYS50aGVtb3ZpZWRiLm9yZy90L3AvdzIyN19hbmRfaDEyN19iZXN0djIvNHhGWXNpcGdwaGtXQWNmY1NWblE0bmJ3Qmx3LmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMng0"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6thrcl/playlist.m3u8"
     },
     "5": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRocnBoL3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9tZWRpYS50aGVtb3ZpZWRiLm9yZy90L3AvdzIyN19hbmRfaDEyN19iZXN0djIvNHhGWXNpcGdwaGtXQWNmY1NWblE0bmJ3Qmx3LmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMng1"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6thrph/playlist.m3u8"
     },
     "6": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRod2h6L3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9tZWRpYS50aGVtb3ZpZWRiLm9yZy90L3AvdzIyN19hbmRfaDEyN19iZXN0djIvNHhGWXNpcGdwaGtXQWNmY1NWblE0bmJ3Qmx3LmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMng2"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6thwhz/playlist.m3u8"
     },
     "7": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRocnZyL3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9tZWRpYS50aGVtb3ZpZWRiLm9yZy90L3AvdzIyN19hbmRfaDEyN19iZXN0djIvNHhGWXNpcGdwaGtXQWNmY1NWblE0bmJ3Qmx3LmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMng3"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6thrvr/playlist.m3u8"
     },
     "8": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnRoczF6L3BsYXlsaXN0Lm0zdTg=&poster=aHR0cHM6Ly9tZWRpYS50aGVtb3ZpZWRiLm9yZy90L3AvdzIyN19hbmRfaDEyN19iZXN0djIvNHhGWXNpcGdwaGtXQWNmY1NWblE0bmJ3Qmx3LmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUMng4"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://rumble.com/hls-vod/6ths1z/playlist.m3u8"
     }
   },
   "3": {
     "1": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly8xYS0xNzkxLmNvbS92aWRlby9md2UyL2E0L3M4LzIvMi9ZL3IvbC8yWXJsei5hYWEubXA0&poster=aHR0cHM6Ly9tZWRpYS50aGVtb3ZpZWRiLm9yZy90L3AvdzIyN19hbmRfaDEyN19iZXN0djIvM3JXdGMwSmV0Q3FtdTU2Uzg5bzY0Z1VjRjhaLmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUM3gx"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://1a-1791.com/video/fwe2/a4/s8/2/2/Y/r/l/2Yrlz.aaa.mp4"
     },
     "2": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly8xYS0xNzkxLmNvbS92aWRlby9md2UyLzZmL3M4LzIvdS9ZL3IvbC91WXJsei5hYWEubXA0&poster=aHR0cHM6Ly9tZWRpYS50aGVtb3ZpZWRiLm9yZy90L3AvdzIyN19hbmRfaDEyN19iZXN0djIvM3JXdGMwSmV0Q3FtdTU2Uzg5bzY0Z1VjRjhaLmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUM3gy"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://1a-1791.com/video/fwe2/6f/s8/2/u/Y/r/l/uYrlz.aaa.mp4"
     },
     "3": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly8xYS0xNzkxLmNvbS92aWRlby9md2UyLzhjL3M4LzIvLS9ZL3IvbC8tWXJsei5hYWEubXA0&poster=aHR0cHM6Ly9tZWRpYS50aGVtb3ZpZWRiLm9yZy90L3AvdzIyN19hbmRfaDEyN19iZXN0djIvM3JXdGMwSmV0Q3FtdTU2Uzg5bzY0Z1VjRjhaLmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUM3gz"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://1a-1791.com/video/fwe2/8c/s8/2/-/Y/r/l/-Yrlz.aaa.mp4"
     },
     "4": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly8xYS0xNzkxLmNvbS92aWRlby9md2UyL2I4L3M4LzIvNi9KL3IvbC82SnJsei5hYWEubXA0&poster=aHR0cHM6Ly9tZWRpYS50aGVtb3ZpZWRiLm9yZy90L3AvdzIyN19hbmRfaDEyN19iZXN0djIvM3JXdGMwSmV0Q3FtdTU2Uzg5bzY0Z1VjRjhaLmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUM3g0"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://1a-1791.com/video/fwe2/b8/s8/2/6/J/r/l/6Jrlz.aaa.mp4"
     },
     "5": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly8xYS0xNzkxLmNvbS92aWRlby9md2UyLzU4L3M4LzIvaS9PL3IvbC9pT3Jsei5hYWEubXA0&poster=aHR0cHM6Ly9tZWRpYS50aGVtb3ZpZWRiLm9yZy90L3AvdzIyN19hbmRfaDEyN19iZXN0djIvM3JXdGMwSmV0Q3FtdTU2Uzg5bzY0Z1VjRjhaLmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUM3g1"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://1a-1791.com/video/fwe2/58/s8/2/i/O/r/l/iOrlz.aaa.mp4"
     },
     "6": {
-      "url": "https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly8xYS0xNzkxLmNvbS92aWRlby9md2UyLzEyL3M4LzIvSy9FL3IvbC9LRXJsei5hYWEubXA0&poster=aHR0cHM6Ly9tZWRpYS50aGVtb3ZpZWRiLm9yZy90L3AvdzIyN19hbmRfaDEyN19iZXN0djIvM3JXdGMwSmV0Q3FtdTU2Uzg5bzY0Z1VjRjhaLmpwZw==&title=QWxpY2UgaW4gQm9yZGVybGFuZCBUM3g2"
+      "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https://1a-1791.com/video/fwe2/12/s8/2/K/E/r/l/KErlz.aaa.mp4"
     }
   }
 };
