--- a/Categorias/romance/index.html
+++ b/Categorias/romance/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- La emboscada -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Una vida en un ano -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula822.html">
+    <img src="https://image.tmdb.org/t/p/original/xGDbQI7Gtgurt9W5ez6Tim2lpS2.jpg" alt="Una vida en un año" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Una vida en un año</div>
+  <div class="text-xs text-white/70">2020</div>
+</article><!-- La emboscada -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula813.html">
     <img src="https://image.tmdb.org/t/p/original/33TgkZ5XuVPCarCSylm3g8iYK1k.jpg" alt="La emboscada" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
