Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Alice in Borderland -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una vida en un ano -->
+<li>
+  <a href="../Peliculas/pelicula822.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/xGDbQI7Gtgurt9W5ez6Tim2lpS2.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Una vida en un año 2020</span>
+    <span class="hidden">Un joven de 17 años descubre que su novia se está muriendo, por lo que se propone darle una vida entera, en el último año que se fue.</span>
+  </a>
+</li>
+<!--FIN--><!-- Alice in Borderland -->
 <li>
   <a href="../Series/serie94.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
