--- a/Categorias/belica/index.html
+++ b/Categorias/belica/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- 300: El Nacimiento de un Imperio -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Rambo -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula823.html">
+    <img src="https://image.tmdb.org/t/p/original/sYHRcd9p3rV3t3w8MHGaA7wdIBl.jpg" alt="Rambo" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Rambo</div>
+  <div class="text-xs text-white/70">1982</div>
+</article><!-- 300: El Nacimiento de un Imperio -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula673.html">
     <img src="https://image.tmdb.org/t/p/original/cbt5wY4rCe63JBmNYnJytJpFhnm.jpg" alt="300: El Nacimiento de un Imperio" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
