--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Rambo -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Rambo II - La mision -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula824.html">
+    <img src="https://image.tmdb.org/t/p/original/TuW7rwhdVPrm3qBsBGnn747Uar.jpg" alt="Rambo II - La misión" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Rambo II - La misión</div>
+  <div class="text-xs text-white/70">1985</div>
+</article><!-- Rambo -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula823.html">
     <img src="https://image.tmdb.org/t/p/original/sYHRcd9p3rV3t3w8MHGaA7wdIBl.jpg" alt="Rambo" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
