--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rambo II - La mision -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rambo III -->
+<li>
+  <a href="../Peliculas/pelicula825.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/69iGRVnOi62ZK2ExoJl12tnvH0T.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Rambo III 1988</span>
+    <span class="hidden">Cuando descubre que el coronel Trautman ha caído en manos soviéticas en Afganistán, Rambo regresa al servicio para intentar liberar a su amigo. Después de contactar a la resistencia afgana, entra en la zona sitiada por las tropas enemigas…</span>
+  </a>
+</li>
+<!--FIN--><!-- Rambo II - La mision -->
 <li>
   <a href="../Peliculas/pelicula824.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
