Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,13 +94,22 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rambo III -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rambo 4: Regreso al infierno -->
+<li>
+  <a href="../Peliculas/pelicula826.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/qp9Q0JeHQ6JShQPm6KA8euYhWLF.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Rambo 4: Regreso al infierno 2008</span>
+    <span class="hidden">John Rambo, el ex-boina verde con una ajetreada vida marcada por la guerra, vive ahora una solitaria y apacible existencia en la jungla del norte de Tailandia, pescando y cazando cobras para luego venderlas. Todo cambia cuando un grupo de misioneros católicos necesita que les guíe hasta la frontera con Birmania para suministrar medicinas y alimentos a unos refugiados asediados por el ejército birmano, que ha hecho de las torturas y los asesinatos algo habitual. Rambo no tendrá más remedio que volver a involucrarse. Se verá obligado a hacer lo que mejor sabe porque, muy a su pesar, lleva la guerra en la sangre.</span>
+  </a>
+</li>
+<!--FIN--><!-- Rambo III -->
 <li>
   <a href="../Peliculas/pelicula825.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
   src="https://image.tmdb.org/t/p/original/69iGRVnOi62ZK2ExoJl12tnvH0T.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Rambo III 1988</span>
-    <span class="hidden">Cuando descubre que el coronel Trautman ha caído en manos soviéticas en Afganistán, Rambo regresa al servicio para intentar liberar a su amigo. Después de contactar a la resistencia afgana, entra en la zona sitiada por las tropas enemigas…</span>
+    <span class="hidden">Cuando descubre que el coronel Trautman ha caído en manos soviéticas en Afganistán, Rambo regresa al servicio para intentar liberar a su amigo. Después de contactar a la resistencia afgana, entra en la zona sitiada por las tropas enemigas⬦</span>
   </a>
 </li>
 <!--FIN--><!-- Rambo II - La mision -->
