Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rambo 4: Regreso al infierno -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rambo: Last Blood -->
+<li>
+  <a href="../Peliculas/pelicula827.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/kG3pY61LWGAzcaSne12CGEeRvtg.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Rambo: Last Blood 2019</span>
+    <span class="hidden">Después de luchar contra sus demonios durante décadas, John Rambo vive ahora en paz en su rancho familiar en Arizona, pero su descanso se ve interrumpido cuando Gabriela, la nieta de su ama de llaves María, desaparece después de cruzar la frontera con México con el propósito de conocer a su padre biológico. Rambo, que con los años se ha convertido para Gabriela en una verdadera figura paterna, emprende un desesperado y peligroso viaje para encontrarla.</span>
+  </a>
+</li>
+<!--FIN--><!-- Rambo 4: Regreso al infierno -->
 <li>
   <a href="../Peliculas/pelicula826.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
