--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Lorax: En Busca De La Trufula Perdida -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Dragones: El Origen De Las Carreras De Dragones -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula828.html">
+    <img src="https://image.tmdb.org/t/p/original/4f9DpOkD5Z0oT3qMfLOa1B2eaWO.jpg" alt="Dragones: El Origen De Las Carreras De Dragones" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Dragones: El Origen De Las Carreras De Dragones</div>
+  <div class="text-xs text-white/70">2014</div>
+</article><!-- Lorax: En Busca De La Trufula Perdida -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula816.html">
     <img src="https://image.tmdb.org/t/p/original/b7FMtquHglzxIi938cHIgVQuPx5.jpg" alt="Lórax: En Busca De La Trúfula Perdida" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
