--- a/Categorias/fantasia/index.html
+++ b/Categorias/fantasia/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La Bella y La Bestia -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Dragones: El Origen De Las Carreras De Dragones -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula828.html">
+    <img src="https://image.tmdb.org/t/p/original/4f9DpOkD5Z0oT3qMfLOa1B2eaWO.jpg" alt="Dragones: El Origen De Las Carreras De Dragones" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Dragones: El Origen De Las Carreras De Dragones</div>
+  <div class="text-xs text-white/70">2014</div>
+</article><!-- La Bella y La Bestia -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula800.html">
     <img src="https://image.tmdb.org/t/p/original/2q38CCkPvhm8DVHazY9QLQtHQoO.jpg" alt="La Bella y La Bestia" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
