--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rambo: Last Blood -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Dragones: El Origen De Las Carreras De Dragones -->
+<li>
+  <a href="../Peliculas/pelicula828.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/4f9DpOkD5Z0oT3qMfLOa1B2eaWO.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Dragones: El Origen De Las Carreras De Dragones 2014</span>
+    <span class="hidden">El origen de las carreras de dragones. , es un cortometraje que describe cómo se inventaron las carreras de dragones. Hipo y todos sus amigos de la academia del dragón discuten sobre quien lo inventó realmente.</span>
+  </a>
+</li>
+<!--FIN--><!-- Rambo: Last Blood -->
 <li>
   <a href="../Peliculas/pelicula827.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
