--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/4f9DpOkD5Z0oT3qMfLOa1B2eaWO.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Dragones: El Origen De Las Carreras De Dragones 2014</span>
-    <span class="hidden">El origen de las carreras de dragones. , es un cortometraje que describe cómo se inventaron las carreras de dragones. Hipo y todos sus amigos de la academia del dragón discuten sobre quien lo inventó realmente.</span>
+    <span class="hidden">como entrenar a tu dragon El origen de las carreras de dragones. , es un cortometraje que describe cómo se inventaron las carreras de dragones. Hipo y todos sus amigos de la academia del dragón discuten sobre quien lo inventó realmente.</span>
   </a>
 </li>
 <!--FIN--><!-- Rambo: Last Blood -->
@@ -109,7 +109,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/kG3pY61LWGAzcaSne12CGEeRvtg.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Rambo: Last Blood 2019</span>
-    <span class="hidden">Después de luchar contra sus demonios durante décadas, John Rambo vive ahora en paz en su rancho familiar en Arizona, pero su descanso se ve interrumpido cuando Gabriela, la nieta de su ama de llaves María, desaparece después de cruzar la frontera con México con el propósito de conocer a su padre biológico. Rambo, que con los años se ha convertido para Gabriela en una verdadera figura paterna, emprende un desesperado y peligroso viaje para encontrarla.</span>
+    <span class="hidden">acorralado 5 ultima sangre Después de luchar contra sus demonios durante décadas, John Rambo vive ahora en paz en su rancho familiar en Arizona, pero su descanso se ve interrumpido cuando Gabriela, la nieta de su ama de llaves María, desaparece después de cruzar la frontera con México con el propósito de conocer a su padre biológico. Rambo, que con los años se ha convertido para Gabriela en una verdadera figura paterna, emprende un desesperado y peligroso viaje para encontrarla.</span>
   </a>
 </li>
 <!--FIN--><!-- Rambo 4: Regreso al infierno -->
@@ -118,7 +118,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/qp9Q0JeHQ6JShQPm6KA8euYhWLF.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Rambo 4: Regreso al infierno 2008</span>
-    <span class="hidden">John Rambo, el ex-boina verde con una ajetreada vida marcada por la guerra, vive ahora una solitaria y apacible existencia en la jungla del norte de Tailandia, pescando y cazando cobras para luego venderlas. Todo cambia cuando un grupo de misioneros católicos necesita que les guíe hasta la frontera con Birmania para suministrar medicinas y alimentos a unos refugiados asediados por el ejército birmano, que ha hecho de las torturas y los asesinatos algo habitual. Rambo no tendrá más remedio que volver a involucrarse. Se verá obligado a hacer lo que mejor sabe porque, muy a su pesar, lleva la guerra en la sangre.</span>
+    <span class="hidden">acorralado John Rambo, el ex-boina verde con una ajetreada vida marcada por la guerra, vive ahora una solitaria y apacible existencia en la jungla del norte de Tailandia, pescando y cazando cobras para luego venderlas. Todo cambia cuando un grupo de misioneros católicos necesita que les guíe hasta la frontera con Birmania para suministrar medicinas y alimentos a unos refugiados asediados por el ejército birmano, que ha hecho de las torturas y los asesinatos algo habitual. Rambo no tendrá más remedio que volver a involucrarse. Se verá obligado a hacer lo que mejor sabe porque, muy a su pesar, lleva la guerra en la sangre.</span>
   </a>
 </li>
 <!--FIN--><!-- Rambo III -->
@@ -127,7 +127,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/69iGRVnOi62ZK2ExoJl12tnvH0T.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Rambo III 1988</span>
-    <span class="hidden">Cuando descubre que el coronel Trautman ha caído en manos soviéticas en Afganistán, Rambo regresa al servicio para intentar liberar a su amigo. Después de contactar a la resistencia afgana, entra en la zona sitiada por las tropas enemigas⬦</span>
+    <span class="hidden">acorralado 3 Cuando descubre que el coronel Trautman ha caído en manos soviéticas en Afganistán, Rambo regresa al servicio para intentar liberar a su amigo. Después de contactar a la resistencia afgana, entra en la zona sitiada por las tropas enemigas⬦</span>
   </a>
 </li>
 <!--FIN--><!-- Rambo II - La mision -->
@@ -136,7 +136,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/TuW7rwhdVPrm3qBsBGnn747Uar.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Rambo II - La misión 1985</span>
-    <span class="hidden">Rambo, encarcelado por sus antiguos crímenes, recibe por parte del coronel Trautman la misión optativa de ir a Vietnam para comprobar si aún quedan prisioneros de guerra. Si la misión saliera bien, el presidente le concedería el perdón, y así sería libre. Rambo acepta. Está bajo las órdenes de un falso teniente (Murdock), al que muy en el fondo sólo le interesa el dinero y el poder de su nación, y al que le da igual perder a unos cuantos hombres, por muy inocentes que sean, si sigue controlando las cosas como él quiere. Murdock le encarga que sólo saque fotos, y que no ataque al enemigo. Pero al saltar en paracaídas sobre un área selvática prohibida, Rambo pierde todo su equipo, excepto un cuchillo dentado y un arco.</span>
+    <span class="hidden">acorralado 2 Rambo, encarcelado por sus antiguos crímenes, recibe por parte del coronel Trautman la misión optativa de ir a Vietnam para comprobar si aún quedan prisioneros de guerra. Si la misión saliera bien, el presidente le concedería el perdón, y así sería libre. Rambo acepta. Está bajo las órdenes de un falso teniente (Murdock), al que muy en el fondo sólo le interesa el dinero y el poder de su nación, y al que le da igual perder a unos cuantos hombres, por muy inocentes que sean, si sigue controlando las cosas como él quiere. Murdock le encarga que sólo saque fotos, y que no ataque al enemigo. Pero al saltar en paracaídas sobre un área selvática prohibida, Rambo pierde todo su equipo, excepto un cuchillo dentado y un arco.</span>
   </a>
 </li>
 <!--FIN--><!-- Rambo -->
@@ -145,7 +145,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/sYHRcd9p3rV3t3w8MHGaA7wdIBl.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Rambo 1982</span>
-    <span class="hidden">Cuando John Rambo, el ex Bere Verde, es acosado por la policía local y arrestado por vagancia, el veterano de Vietnam escapa de la policía y corre por las colinas, donde se desarrolla una guerra ente Rambo y la policía de ese pueblo. Acosado por un incansable sheriff, Rambo emplea tácticas de guerrilla duras para sacudir a los policías.</span>
+    <span class="hidden">acorralado 1 Cuando John Rambo, el ex Bere Verde, es acosado por la policía local y arrestado por vagancia, el veterano de Vietnam escapa de la policía y corre por las colinas, donde se desarrolla una guerra ente Rambo y la policía de ese pueblo. Acosado por un incansable sheriff, Rambo emplea tácticas de guerrilla duras para sacudir a los policías.</span>
   </a>
 </li>
 <!--FIN--><!-- Una vida en un ano -->
@@ -181,7 +181,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/roxD9VCTTXYfPjVj9HiSC5IMtc7.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Mea Culpa 2024</span>
-    <span class="hidden">Después de aceptar el caso de un artista acusado de asesinato, una abogada defensora se ve forzada a elegir entre su familia, el deber y sus instintos más básicos.</span>
+    <span class="hidden">culpa mia Después de aceptar el caso de un artista acusado de asesinato, una abogada defensora se ve forzada a elegir entre su familia, el deber y sus instintos más básicos.</span>
   </a>
 </li>
 <!--FIN--><!-- Simon -->
