--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,24 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Dragones: El Origen De Las Carreras De Dragones -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Dumbo -->
+<li>
+  <a href="../Peliculas/pelicula829.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+    <img 
+      src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/z1ZXAezmSS0uDDtciAOTpcnG6t3.jpg" 
+      alt="poster" 
+      class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" 
+      loading="lazy"/>
+    <span class="hidden">Dumbo 1941</span>
+    <span class="hidden">
+      A Dumbo, un pequeño elefante nacido en un circo, todos se burlan por sus enormes orejas. 
+      Pero junto a su amigo, el ratoncito Timothy, descubrirá que esas orejas le permiten volar 
+      y convertir su diferencia en algo maravilloso.
+    </span>
+  </a>
+</li>
+<!--FIN-->
+<!-- Dragones: El Origen De Las Carreras De Dragones -->
 <li>
   <a href="../Peliculas/pelicula828.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
