--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -86,6 +86,19 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
   </a>
   <div class="mt-2 font-semibold text-sm leading-tight truncate">Dragones: El Origen De Las Carreras De Dragones</div>
   <div class="text-xs text-white/70">2014</div>
+</article><!-- Dumbo -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula829.html">
+    <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/z1ZXAezmSS0uDDtciAOTpcnG6t3.jpg" 
+         alt="poster" 
+         class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" 
+         loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Dumbo</div>
+  <div class="text-xs text-white/70">1941</div>
 </article><!-- Lorax: En Busca De La Trufula Perdida -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula816.html">
