--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,20 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Dragones: El Origen De Las Carreras De Dragones -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Dumbo -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula829.html">
+    <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/z1ZXAezmSS0uDDtciAOTpcnG6t3.jpg" 
+         alt="poster" 
+         class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" 
+         loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Dumbo</div>
+  <div class="text-xs text-white/70">1941</div>
+</article><!-- Dragones: El Origen De Las Carreras De Dragones -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula828.html">
     <img src="https://image.tmdb.org/t/p/original/4f9DpOkD5Z0oT3qMfLOa1B2eaWO.jpg" alt="Dragones: El Origen De Las Carreras De Dragones" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
