--- a/Plataforma/disney/index.html
+++ b/Plataforma/disney/index.html
@@ -190,7 +190,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Dumbo -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Pinocho -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula830.html">
+    <img src="https://image.tmdb.org/t/p/original/sAluF7lNc4Mv3qxx1mmOgsfbr0C.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Pinocho</div>
+  <div class="text-xs text-white/70">1940</div>
+</article><!-- Dumbo -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula829.html">
     <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/z1ZXAezmSS0uDDtciAOTpcnG6t3.jpg" 
