Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Dumbo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Pinocho -->
+<li>
+  <a href="../Peliculas/pelicula830.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/sAluF7lNc4Mv3qxx1mmOgsfbr0C.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Pinocho 1940</span>
+    <span class="hidden">Cuando el amoroso Geppetto crea un títere de madera, su deseo se cumple cuando el títere cobra vida y se convierte en un niño de madera. Con su fiel amigo y conciencia, Pepe Grillo, a su lado, Pinocho se embarca en fantásticas aventuras que ponen a prueba su valentía, lealtad y honestidad hasta triunfar en la deseosa búsqueda de su corazón: convertirse en un niño de verdad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Dumbo -->
 <li>
   <a href="../Peliculas/pelicula829.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
     <img 
