Crear/Actualizar Categorias/musica/index.html

--- a/Categorias/musica/index.html
+++ b/Categorias/musica/index.html
@@ -81,7 +81,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Better Man: La Historia de Robbie Williams -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Tom y Jerry: La pelicula -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula831.html">
+    <img src="https://image.tmdb.org/t/p/original/7LVlL5My8lftjb3HKJdrxcDE586.jpg" alt="Tom y Jerry: La pelicula" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Tom y Jerry: La pelicula</div>
+  <div class="text-xs text-white/70">1992</div>
+</article><!-- Better Man: La Historia de Robbie Williams -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula644.html">
     <img src="https://image.tmdb.org/t/p/original/ak7VgAaI94K6CbbFuL22xIBJtyE.jpg" alt="Better Man: La Historia de Robbie Williams" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
