Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Pinocho -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tom y Jerry: La pelicula -->
+<li>
+  <a href="../Peliculas/pelicula831.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/7LVlL5My8lftjb3HKJdrxcDE586.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Tom y Jerry: La pelicula 1992</span>
+    <span class="hidden">El popular gato y el popular ratón de dibujos animados son lanzados a una película. La historia tiene a los dos, gato y ratón, tratando de ayudar a una niña huérfana que está siendo reprendida y explotada por un guardián codicioso.</span>
+  </a>
+</li>
+<!--FIN--><!-- Pinocho -->
 <li>
   <a href="../Peliculas/pelicula830.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
