Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tom y Jerry: La pelicula -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tom y Jerry: El Anillo Magico -->
+<li>
+  <a href="../Peliculas/pelicula832.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/pBaZB5mlnrkPphcKjKfNFU3O4B6.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Tom y Jerry: El Anillo Mágico 2002</span>
+    <span class="hidden">El equipo de gato y raton favoritos del mundo vuelve a la acción en una nueva aventura animada de larga duración que sin duda hechizará a toda la familia. Tom se queda a cargo de un anillo mágico de valor incalculable por su joven maestro mago, y se horroriza cuando el anillo se atasca en la cabeza de Jerry, que luego se escapa a la ciudad. Antes de que puedas decir "abracadabra", toda la ciudad está en la cola de nuestros héroes.</span>
+  </a>
+</li>
+<!--FIN--><!-- Tom y Jerry: La pelicula -->
 <li>
   <a href="../Peliculas/pelicula831.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
