Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tom y Jerry: El cascanueces -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Iron man - El hombre de hierro -->
+<li>
+  <a href="../Peliculas/pelicula834.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/tFCTNx7foAsUQpgu2x1KjAJD1wT.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Iron man - El hombre de hierro 2008</span>
+    <span class="hidden">El multimillonario fabricante de armas Tony Stark (Robert Downey Jr.) debe enfrentarse a su turbio pasado después de sufrir un accidente con una de sus armas. Equipado con una armadura de última generación tecnológica, se convierte en “El hombre de hierro”, un héroe que se dedica a combatir el mal en todo el mundo</span>
+  </a>
+</li>
+<!--FIN--><!-- Tom y Jerry: El cascanueces -->
 <li>
   <a href="../Peliculas/pelicula833.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
