--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Tom y Jerry: El cascanueces -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Tom y Jerry en la Tierra de Nieve -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula837.html">
+    <img src="https://image.tmdb.org/t/p/original/tznOAhVFPAlYXgdrAEUOWpwIGzR.jpg" alt="Tom y Jerry en la Tierra de Nieve" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Tom y Jerry en la Tierra de Nieve</div>
+  <div class="text-xs text-white/70">2022</div>
+</article><!-- Tom y Jerry: El cascanueces -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula833.html">
     <img src="https://image.tmdb.org/t/p/original/evxTPd82kN4nYqM215SDBoJEROt.jpg" alt="Tom y Jerry: El cascanueces" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
