Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Iron Man 3 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tom y Jerry en la Tierra de Nieve -->
+<li>
+  <a href="../Peliculas/pelicula837.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/tznOAhVFPAlYXgdrAEUOWpwIGzR.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Tom y Jerry en la Tierra de Nieve 2022</span>
+    <span class="hidden">¡Es hora de perseguir ese espíritu navideño con Tom y Jerry! Con magia en el aire, Jerry y su sobrino, Tuffy, hacen un ratón de nieve que mágicamente cobra vida. Para evitar que su nuevo amigo Larry, el ratón de nieve, se derrita, Tuffy y Jerry deben llevarlo a la legendaria Aldea del Hombre de Nieve. En una persecución frenética, Tom y el ladino Dr. Doublevay tienen sus propios planes para la magia de Larry. ¡Prepárate para ir a toda carrera a través de esta historia épica llena de canciones, nieve, emociones, risas e incluso un poco de magia navideña!</span>
+  </a>
+</li>
+<!--FIN--><!-- Iron Man 3 -->
 <li>
   <a href="../Peliculas/pelicula836.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
