Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Simpson: Santa Homero -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Habia una vez en Hollywood -->
+<li>
+  <a href="../Peliculas/pelicula839.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/vKSyaptSA7zZ9H8mSfaDnvyQl9k.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Había una vez en Hollywood 2019</span>
+    <span class="hidden">Los Angeles, 1969. La estrella de televisión Rick Dalton, un actor en horas bajas especializado en westerns, y el doble de acción Cliff Booth, su mejor amigo, tratan de sobrevivir a una industria cinematográfica en constante cambio. Dalton es vecino de la joven y prometedora actriz y modelo Sharon Tate, que acaba de casarse con el prestigioso director polaco Roman Polanski…</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Simpson: Santa Homero -->
 <li>
   <a href="../Peliculas/pelicula838.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
