--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/vKSyaptSA7zZ9H8mSfaDnvyQl9k.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Había una vez en Hollywood 2019</span>
-    <span class="hidden">Los Angeles, 1969. La estrella de televisión Rick Dalton, un actor en horas bajas especializado en westerns, y el doble de acción Cliff Booth, su mejor amigo, tratan de sobrevivir a una industria cinematográfica en constante cambio. Dalton es vecino de la joven y prometedora actriz y modelo Sharon Tate, que acaba de casarse con el prestigioso director polaco Roman Polanski…</span>
+    <span class="hidden">erase una Los Angeles, 1969. La estrella de televisión Rick Dalton, un actor en horas bajas especializado en westerns, y el doble de acción Cliff Booth, su mejor amigo, tratan de sobrevivir a una industria cinematográfica en constante cambio. Dalton es vecino de la joven y prometedora actriz y modelo Sharon Tate, que acaba de casarse con el prestigioso director polaco Roman Polanski…</span>
   </a>
 </li>
 <!--FIN--><!-- Los Simpson: Santa Homero -->
@@ -109,7 +109,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/q4nny4lnjnLYzN10EvBBRsJComp.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Los Simpson: Santa Homero 2024</span>
-    <span class="hidden">Todo se complica cuando el mentalista británico Darren Brown llega a Springfield . Homero queda hipnotizado y piensa que es Santa Claus, desencadenando una serie de reacciones en todo el pueblo.</span>
+    <span class="hidden">hohoho ho homer santa simpsons Todo se complica cuando el mentalista británico Darren Brown llega a Springfield . Homero queda hipnotizado y piensa que es Santa Claus, desencadenando una serie de reacciones en todo el pueblo.</span>
   </a>
 </li>
 <!--FIN--><!-- Tom y Jerry en la Tierra de Nieve -->
